# test_libfacedetection

./: CMakeLists.txt  README.md
example/: libfacedetectcnn-example.cpp
src/: Makefile
